--- a/style.css
+++ b/style.css
@@ -56,5 +56,12 @@ input:hover {
 
 
 p {
-    color: black;
+    color: rgb(0, 0, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2%;
+    font-weight: 600;
+    font-size: 2rem;
+    transition: .4s;
 }
