--- a/segpage.css
+++ b/segpage.css
@@ -11,7 +11,7 @@ div {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 15%;
+    margin-top: 1%;
 }
 
 img {
@@ -67,3 +67,9 @@ p {
 }
 
 
+h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10%;
+}
